--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 DB_USER=postgres
 DB_PASSWORD=songyujian2002
 DB_NAME=euro_db
+DB_HOST=localhost
+DB_PORT=5432
+GOOGLE_API_KEY=AIzaSyC2yQvDaNVpkyJ15vet56D-eLZ6sQ38sCI
+GOOGLE_CSE_ID=c16d64b2c35f749ff
