--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "immutable": "^4.3.5",
     "prettier": "3.2.5",
     "react-error-overlay": "6.0.11",
-    "sass": "^1.75.0"
+    "sass": "1.58.3"
   },
   "packageManager": "yarn@4.1.1"
 }
