--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "chance": "^1.1.11",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "dotenv": "^16.4.7",
@@ -30,11 +31,12 @@
     "pg": "^8.14.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.22.3",
     "vite": "^5.2.0",
