Updated news workflow

--- a/.github/workflows/fetch-euro-news.yml
+++ b/.github/workflows/fetch-euro-news.yml
@@ -2,12 +2,27 @@ name: Fetch Euro 2028 News
 
 on:
   schedule:
-    - cron: '15 15 * * *'
+    - cron: '40 15 * * *'
   workflow_dispatch:
 
 jobs:
   fetch-news:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: songyujian2002
+          POSTGRES_DB: euro_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
     - name: Checkout repo
@@ -25,12 +40,12 @@ jobs:
 
     - name: Run news fetch script
       env:
+        PGHOST: localhost
+        PGPORT: 5432
+        PGDATABASE: euro_db
+        PGUSER: postgres
+        PGPASSWORD: postgres
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         GOOGLE_CSE_ID: ${{ secrets.GOOGLE_CSE_ID }}
-        PGHOST: ${{ secrets.PGHOST }}
-        PGPORT: ${{ secrets.PGPORT }}
-        PGDATABASE: ${{ secrets.PGDATABASE }}
-        PGUSER: ${{ secrets.PGUSER }}
-        PGPASSWORD: ${{ secrets.PGPASSWORD }}
       run: |
         python backend/scripts/fetch_news.py
