Deploy Node backend

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ DB_HOST=localhost
 DB_PORT=5432
 GOOGLE_API_KEY=AIzaSyC2yQvDaNVpkyJ15vet56D-eLZ6sQ38sCI
 GOOGLE_CSE_ID=c16d64b2c35f749ff
+DATABASE_URL=postgresql://postgres.kerznrfyqlxtxgjxeisi:M4fG8DnulqcQmiNv@aws-0-us-east-1.pooler.supabase.com:6543/postgres
