--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 PUBLIC_URL = https://codedthemes.com/demos/admin-templates/datta-able/react/free/
 VITE_APP_BASE_NAME= kickback
+VITE_API_BASE_URL=https://kickback.herokuapp.com
 
 ## Google Map Key
-VITE_APP_GOOGLE_MAPS_API_KEY=
+VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyAlGFXzYM5_5lYFSrdKJcdJmlrTFnGkmrE
 
