--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ GENERATE_SOURCEMAP = false
 PUBLIC_URL = https://codedthemes.com/demos/admin-templates/datta-able/react/free/
 VITE_APP_BASE_NAME= kickback
 VITE_API_BASE_URL=https://kickback.herokuapp.com
+VITE_FLASK_API=https://kickback-flask.herokuapp.com
 
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyAlGFXzYM5_5lYFSrdKJcdJmlrTFnGkmrE
