--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 PUBLIC_URL = https://codedthemes.com/demos/admin-templates/datta-able/react/free/
 VITE_APP_BASE_NAME= 
-VITE_API_BASE_URL=https://kickback-ac72db97537b.herokuapp.com/
+VITE_API_BASE_URL=https://kickback-ac72db97537b.herokuapp.com
 VITE_FLASK_API=https://kickback-flask.herokuapp.com
 
 ## Google Map Key
