fix: use VITE_API_BASE_URL in EuroExtremes

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ GENERATE_SOURCEMAP = false
 PUBLIC_URL = https://codedthemes.com/demos/admin-templates/datta-able/react/free/
 VITE_APP_BASE_NAME= 
 VITE_API_BASE_URL=https://kickback-ac72db97537b.herokuapp.com
-VITE_FLASK_API=https://kickback-flask.herokuapp.com
+VITE_FLASK_API= https://kickback-flask-ee1c2644f8ec.herokuapp.com/
 
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyAlGFXzYM5_5lYFSrdKJcdJmlrTFnGkmrE
